<resources>
    <string name="app_name">Feed Me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="onboarding_title_1">Seja bem-vindo ao Feed.me</string>
    <string name="onboarding_title_2">Uma rede social apenas para o que há de melhor: comida</string>
    <string name="onboarding_title_3">Do frango maromba ao hambúrguer com batata frita, ninguém para o Feed.me</string>
    <string name="onboarding_description_1">A receita perfeita está a apenas um toque de distância. Na dúvida sobre o rango de hoje? Lasanha ou Pizza? Vem que a gente te ajuda!</string>
    <string name="onboarding_description_2">Troque receitas com qualquer um ao redor do mundo gratuitamente! Somos seu novo livro de receitas, sempre na palma da sua mão.</string>
    <string name="onboarding_description_3">Por aqui, você escolhe o que come. Contamos com filtros exclusivos para intolerantes, veganos, vegetarianos, celíacos, e até mesmo para os esfomeados de plantão tentando cozinhar com o que sobrou na geladeira!</string>
    <string name="create_your_acc">Crie sua conta</string>
    <string name="fast">Rápida</string>
    <string name="regular">Normal</string>
    <string name="elaborate">Elaborada</string>
    <string name="leave">Sair</string>

    <!--TextViews-->
    <string name="signin">Entrar</string>
    <string name="login_slogan">Acesse sua conta e aproveite as delícias do Feed.me</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="do_not_have_an_acc">Não tem conta?</string>
    <string name="create_acc">Criar conta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="step_by_step">Passo a Passo</string>
    <string name="register">Cadastro</string>
    <string name="register_slogan">Crie sua conta gratuitamente e se delicie conosco!</string>
    <string name="already_have_an_acc">Já tem uma conta?</string>
    <string name="login_here">Entre aqui!</string>
    <string name="search_here">Pesquise aqui</string>
    <string name="ingredient">Ingrediente</string>
    <string name="quantity">Quantidade</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. Qui quia internos mollitia corrupti ut unde voluptates vel rerum perferendis non officia accusamus.</string>
    <string name="list_number">1.</string>
    <string name="time">Tempo</string>
    <string name="hard">Difícil</string>
    <string name="username">Username</string>
    <string name="review_title">Título da avaliação</string>
    <string name="utensil">Utensílio</string>

    <!--Menus-->
    <string name="profile">Perfil</string>
    <string name="ranking">Ranking</string>
    <string name="home">Home</string>
    <string name="alerts">Alertas</string>
    <string name="email_example">myemail@gmail.com</string>
    <string name="email_support_message">Seu e-mail deve conter @</string>
    <string name="password_support_message">Sua senha deve conter pelo menos 8 caracteres</string>
    <string name="name">Nome</string>
    <string name="name_example">Maria</string>
    <string name="name_support_message">Seu nome não deve estar vazio</string>
    <string name="last_name">Sobrenome</string>
    <string name="last_name_example">Silva</string>
    <string name="last_name_support_message">Seu sobrenome não deve estar vazio</string>
    <string name="password_example">********</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="recover_pasword">Recuperar Senha</string>
    <string name="recover_pasword_slogan">Volte logo a se deliciar com nossas receitas</string>
    <string name="password_confirmation">Confirme sua senha</string>
    <string name="password_confirmation_support_message">As senhas devem ser iguais</string>
    <string name="login">Login</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="confirm_your_email">Confirme seu e-mail</string>
    <string name="access_your_email_box_and_confirm_link">Para prosseguir, acesse sua caixa de entrada e confirme seu e-mail clicando no link recebido</string>
    <string name="resend_email">Reenviar e-mail</string>
    <string name="release_message">Dispensar</string>
    <string name="email_was_resent">E-mail reenviado. Verifique a caixa de entrada</string>
    <string name="confirmed">Confirmei</string>
    <string name="error_weak_password">Senha muito fraca</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="email_already_exists">Este e-mail já está sendo usado por outra conta</string>
    <string name="continue_bt">Continuar</string>
    <string name="access_your_acc">Acesse sua conta</string>
    <string name="measure_example">200 gr</string>
    <string name="liked">Curtiu</string>
    <string name="like">Curtir</string>
</resources>