<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginVertical="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/recover_pasword"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recover_pasword_slogan"
        android:textColor="@color/grey_dark"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_dark"
                android:hint="@string/email_example"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/grey_dark"
                android:textColorHint="@color/grey_dark" />

            <TextView
                android:id="@+id/email_support_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/segoe_small"
                android:text="@string/email_support_message"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="16dp"
                app:cardCornerRadius="16dp">

                <Button
                    android:id="@+id/recover_password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/accent"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingHorizontal="16dp"
                    android:text="@string/recover_pasword"
                    android:textSize="16dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/do_not_have_an_acc"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/create_acc"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>