<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.EmailConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/login"
            android:textColor="@color/grey_darker"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:text="@string/confirm_your_email"
            android:textColor="@color/grey_darker"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/access_your_email_box_and_confirm_link"
            android:textColor="@color/grey_dark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/floating_message"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:animateLayoutChanges="true"
            android:elevation="10dp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/grey_darker"
            app:cardCornerRadius="@dimen/floating_message_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_darker"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_small"
                    android:gravity="center"
                    android:text="@string/email_was_resent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subtitle" />

                <TextView
                    android:id="@+id/release_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/segoe_bold"
                    android:gravity="center"
                    android:text="@string/release_message"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/detail_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/resend_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/resend_email"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:elevation="@dimen/button_elevation"
            app:cardBackgroundColor="@color/accent"
            app:cardCornerRadius="@dimen/button_corner_radius"
            app:cardElevation="@dimen/button_elevation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/accent"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/confirmed"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>