<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="348dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="8dp"
    android:elevation="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:src="@drawable/ic_person_black" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/segoe_small"
                android:text="@string/username"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressBackgroundTint="@color/grey_dark"
                android:progressTint="@color/star"
                android:rating="3.5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/review_title"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/title" />
        </LinearLayout>

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_small"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/subtitle" />
    </LinearLayout>
</androidx.cardview.widget.CardView>